--- a/index.html
+++ b/index.html
@@ -1,5 +1,18 @@
+<!DOCTYPE html>
 <html>
-	<body>
-		Hello
-	</body>
+    <head>
+        <title>Justin Van Dort's Personal Homepage</title>
+        <link rel="stylesheet" type="text/css" href="index.css">
+        <meta charset="utf-8" />
+        
+    </head>
+    <body> 
+
+        <!-- Dependencies -->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/react/16.4.2/umd/react.production.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/react-dom/16.4.2/umd/react-dom.production.min.js"></script>
+        
+        <div id = "app"></div>
+        <script src="bundle.js"></script>
+    </body>
 </html>
